# docs/swagger.json
@@ -9,6 +9,58 @@
     "host": "188.93.210.165:8080",
     "basePath": "/",
     "paths": {
+        "/account/actions": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "update actions",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "update actions",
+                "operationId": "update-actions",
+                "parameters": [
+                    {
+                        "description": "action info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/pb.ActionsRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/account/details": {
             "get": {
                 "security": [
@@ -330,6 +382,17 @@
                 }
             }
         },
+        "pb.ActionsRequest": {
+            "type": "object",
+            "properties": {
+                "ID": {
+                    "type": "integer"
+                },
+                "action": {
+                    "type": "string"
+                }
+            }
+        },
         "pb.CreateUserRequest": {
             "type": "object",
             "properties": {
@@ -387,9 +450,6 @@
             "properties": {
                 "Email": {
                     "type": "string"
-                },
-                "ID": {
-                    "type": "integer"
                 },
                 "Password": {
                     "type": "string"
